using UnityEngine;
using UnityEngine.AI;
using System.Collections;
using PLAYERTWO.PlatformerProject;
using BossBomb = PLAYERTWO.PlatformerProject.BossBomb;
using BossFireball = PLAYERTWO.PlatformerProject.BossFireball;

namespace PLAYERTWO.PlatformerProject
{
    /// <summary>
    /// Soldier Robot Boss - ƒê∆°n gi·∫£n h√≥a ho√†n to√†n
    /// </summary>
    public class SoldierRobot : BaseBoss
    {
        [Header("Bomb Settings")]
        [SerializeField] private GameObject bombPrefab;
        [SerializeField] private Transform rightHandSpawnPoint;
        [SerializeField] private Transform leftHandSpawnPoint;
        [SerializeField] private float bombThrowForce = 10f;
        [SerializeField] private float bombDamage = 50f;
        [SerializeField] private float bombFuseTime = 3f;
        [SerializeField] private float bombExplosionRadius = 5f;
        [SerializeField] private float bombExplosionForce = 15f;

        [Header("Fireball Settings")]
        [SerializeField] private GameObject fireballPrefab;
        [SerializeField] private Transform fireballSpawnPoint;
        [SerializeField] private float fireballDamage = 30f;
        [SerializeField] private float fireballSpeed = 8f;
        [SerializeField] private float fireballLifetime = 5f;

        [Header("Movement Settings")]
        [SerializeField] private Transform centerPoint;
        [SerializeField] private float wanderRadius = 10f;
        [SerializeField] private float movementRestTime = 2f;

        [Header("Rotation Settings")]
        [SerializeField] private float rotationSpeed = 5f;
        [SerializeField] private float rotationThreshold = 5f; // G√≥c t·ªëi thi·ªÉu ƒë·ªÉ b·∫Øt ƒë·∫ßu xoay

        [Header("Animation")]
        [SerializeField] private Animator skinAnimator;
        [SerializeField] private RuntimeAnimatorController animatorController;

        [Header("Effects")]
        [SerializeField] private GameObject bombExplosionEffect;
        [SerializeField] private GameObject fireballEffect;

        [Header("Player")]
        [SerializeField] private new Player player;
        [SerializeField] private bool autoFindPlayer = true;

        // Components
        private NavMeshAgent agent;

        // Attack sequence state
        private bool m_isInAttackSequence = false;
        private int m_currentStep = 0; // 0: bomb right, 1: bomb left, 2: fireball, 3: move
        private bool m_isMoving = false;

        protected override void Start()
        {
            base.Start();

            // T·ª± ƒë·ªông l·∫•y NavMeshAgent
            agent = GetComponent<NavMeshAgent>();
            if (agent == null)
            {
                Debug.LogError($"‚ùå NavMeshAgent component not found!");
            }

            // T·ª± ƒë·ªông t√¨m Player
            if (player == null && autoFindPlayer)
            {
                player = Object.FindFirstObjectByType<Player>();
            }

            // B·∫Øt ƒë·∫ßu attack sequence
            StartAttackSequence();
        }

        private void StartAttackSequence()
        {
            if (m_isInAttackSequence) return;

            m_isInAttackSequence = true;
            m_currentStep = 0;

            Debug.Log($"üéØ Starting attack sequence");

            // B·∫Øt ƒë·∫ßu v·ªõi bomb tay ph·∫£i
            StartCoroutine(ExecuteAttackSequence());
        }

        private IEnumerator ExecuteAttackSequence()
        {
            // B∆∞·ªõc 1: B·∫Øn bomb tay ph·∫£i
            Debug.Log($"üí£ Step 1: Shooting bomb with right hand");
            ShootBomb(true);
            yield return new WaitForSeconds(1f);

            // B∆∞·ªõc 2: B·∫Øn bomb tay tr√°i
            Debug.Log($"üí£ Step 2: Shooting bomb with left hand");
            ShootBomb(false);
            yield return new WaitForSeconds(3f);

            // B∆∞·ªõc 3: B·∫Øn fireball (1-2 qu·∫£)
            int fireballCount = Random.Range(1, 3);
            Debug.Log($"üî• Step 3: Shooting {fireballCount} fireballs");

            for (int i = 0; i < fireballCount; i++)
            {
                ShootFireball();
                if (i < fireballCount - 1) // Kh√¥ng ngh·ªâ sau qu·∫£ cu·ªëi
                    yield return new WaitForSeconds(2f);
            }

            yield return new WaitForSeconds(5f);

            // B∆∞·ªõc 4: Di chuy·ªÉn
            Debug.Log($"üö∂ Step 4: Moving to new position");
            yield return StartCoroutine(MoveToNewPosition());

            // Reset v√† l·∫∑p l·∫°i
            m_isInAttackSequence = false;
            StartAttackSequence();
        }

        private void ShootBomb(bool useRightHand)
        {
            if (m_isMoving) return;

            Transform spawnPoint = useRightHand ? rightHandSpawnPoint : leftHandSpawnPoint;
            if (spawnPoint == null) return;

            // Xoay v·ªÅ h∆∞·ªõng player tr∆∞·ªõc khi b·∫Øn
            StartCoroutine(RotateTowardsPlayer(() =>
            {
                // Trigger animation sau khi ƒë√£ xoay
                if (skinAnimator != null)
                {
                    if (useRightHand)
                        skinAnimator.SetTrigger("RightHandShoot");
                    else
                        skinAnimator.SetTrigger("LeftHandShoot");
                }
            }));
        }

        private void ShootFireball()
        {
            if (m_isMoving) return;

            // Xoay v·ªÅ h∆∞·ªõng player tr∆∞·ªõc khi b·∫Øn
            StartCoroutine(RotateTowardsPlayer(() =>
            {
                // Trigger animation sau khi ƒë√£ xoay
                if (skinAnimator != null)
                    skinAnimator.SetTrigger("FireballShoot");
            }));
        }

        // Animation Events
        public void ShootBombFromAnimation(bool useRightHand)
        {
            if (m_isMoving) return;

            Transform spawnPoint = useRightHand ? rightHandSpawnPoint : leftHandSpawnPoint;
            if (spawnPoint == null) return;

            GameObject bomb = Instantiate(bombPrefab, spawnPoint.position, spawnPoint.rotation);
            SetupBomb(bomb);
        }

        public void CreateFireballFromAnimation()
        {
            if (m_isMoving) return;

            if (fireballPrefab == null || fireballSpawnPoint == null) return;

            GameObject fireball = Instantiate(fireballPrefab, fireballSpawnPoint.position, fireballSpawnPoint.rotation);
            SetupFireball(fireball);
        }

        private void SetupBomb(GameObject bomb)
        {
            var bombComponent = bomb.GetComponent<BossBomb>();
            if (bombComponent == null)
            {
                bombComponent = bomb.AddComponent<BossBomb>();
            }

            if (player == null && autoFindPlayer)
                player = Object.FindFirstObjectByType<Player>();

            if (player != null)
                bombComponent.SetupFromPool(player, bombThrowForce, (int)bombDamage, bombFuseTime, bombExplosionRadius, bombExplosionForce);
        }

        private void SetupFireball(GameObject fireball)
        {
            var fireballComponent = fireball.GetComponent<BossFireball>();

            if (fireballComponent == null)
                fireballComponent = fireball.AddComponent<BossFireball>();

            fireballComponent.SetupFromPool((int)fireballDamage, fireballSpeed, fireballLifetime);
        }

        private IEnumerator MoveToNewPosition()
        {
            if (m_isMoving) yield break;

            m_isMoving = true;

            // T√¨m v·ªã tr√≠ m·ªõi c√°ch xa v·ªã tr√≠ hi·ªán t·∫°i
            Vector3 newPosition = GetNewPosition();
            agent.SetDestination(newPosition);

            if (skinAnimator != null)
                skinAnimator.SetBool("isMoving", true);

            // Ch·ªù ƒë·∫øn n∆°i
            while (agent.pathPending || agent.remainingDistance > 0.2f)
                yield return null;

            if (skinAnimator != null)
                skinAnimator.SetBool("isMoving", false);

            yield return new WaitForSeconds(movementRestTime);

            m_isMoving = false;
        }

        private Vector3 GetNewPosition()
        {
            Vector3 center = centerPoint != null ? centerPoint.position : transform.position;
            Vector3 currentPos = transform.position;

            // T√¨m v·ªã tr√≠ c√°ch xa v·ªã tr√≠ hi·ªán t·∫°i
            Vector3 randomDirection;
            int attempts = 0;
            float minDistance = wanderRadius * 0.5f;

            do
            {
                randomDirection = Random.insideUnitSphere * wanderRadius;
                randomDirection += center;
                attempts++;
            }
            while (Vector3.Distance(currentPos, randomDirection) < minDistance && attempts < 10);

            NavMeshHit hit;
            bool found = NavMesh.SamplePosition(randomDirection, out hit, wanderRadius, 1);

            if (!found)
                found = NavMesh.SamplePosition(randomDirection, out hit, wanderRadius * 2f, 1);

            if (!found)
                return transform.position;

            return hit.position;
        }

        /// <summary>
        /// Xoay boss v·ªÅ h∆∞·ªõng player m·ªôt c√°ch m∆∞·ª£t m√†
        /// </summary>
        private IEnumerator RotateTowardsPlayer(System.Action onComplete = null)
        {
            if (player == null)
            {
                onComplete?.Invoke();
                yield break;
            }

            Vector3 directionToPlayer = (player.transform.position - transform.position).normalized;
            directionToPlayer.y = 0; // Ch·ªâ xoay tr√™n tr·ª•c Y

            if (directionToPlayer.magnitude < 0.1f)
            {
                onComplete?.Invoke();
                yield break;
            }

            Quaternion targetRotation = Quaternion.LookRotation(directionToPlayer);
            float angleDifference = Quaternion.Angle(transform.rotation, targetRotation);

            // Ch·ªâ xoay n·∫øu g√≥c kh√°c bi·ªát ƒë·ªß l·ªõn
            if (angleDifference > rotationThreshold)
            {
                float rotationTime = angleDifference / (rotationSpeed * 90f); // T√≠nh th·ªùi gian xoay

                Quaternion startRotation = transform.rotation;
                float elapsedTime = 0f;

                while (elapsedTime < rotationTime)
                {
                    elapsedTime += Time.deltaTime;
                    float progress = elapsedTime / rotationTime;

                    transform.rotation = Quaternion.Slerp(startRotation, targetRotation, progress);
                    yield return null;
                }

                transform.rotation = targetRotation;
            }

            onComplete?.Invoke();
        }

        // Public methods for animation events
        public void TriggerRightHandShoot()
        {
            if (m_isMoving) return;
            if (skinAnimator != null)
                skinAnimator.SetTrigger("RightHandShoot");
        }

        public void TriggerLeftHandShoot()
        {
            if (m_isMoving) return;
            if (skinAnimator != null)
                skinAnimator.SetTrigger("LeftHandShoot");
        }

        public void TriggerFireballShoot()
        {
            if (m_isMoving) return;
            if (skinAnimator != null)
                skinAnimator.SetTrigger("FireballShoot");
        }

        // Public properties and methods for other classes
        public Animator SkinAnimator => skinAnimator;
        public RuntimeAnimatorController AnimatorController => animatorController;
        public GameObject BombPrefab => bombPrefab;
        public GameObject FireballPrefab => fireballPrefab;
        public GameObject BombExplosionEffect => bombExplosionEffect;
        public GameObject FireballEffect => fireballEffect;
        public Transform RightHandSpawnPoint => rightHandSpawnPoint;
        public Transform LeftHandSpawnPoint => leftHandSpawnPoint;
        public Transform FireballSpawnPoint => fireballSpawnPoint;

        // Setter methods for factory
        public void SetBombPrefab(GameObject newPrefab) => bombPrefab = newPrefab;
        public void SetFireballPrefab(GameObject newPrefab) => fireballPrefab = newPrefab;
        public void SetBombExplosionEffect(GameObject newEffect) => bombExplosionEffect = newEffect;
        public void SetFireballEffect(GameObject newEffect) => fireballEffect = newEffect;
        public void SetRightHandSpawnPoint(Transform newPoint) => rightHandSpawnPoint = newPoint;
        public void SetLeftHandSpawnPoint(Transform newPoint) => leftHandSpawnPoint = newPoint;
        public void SetFireballSpawnPoint(Transform newPoint) => fireballSpawnPoint = newPoint;
        public void SetSkinAnimator(Animator newAnimator) => skinAnimator = newAnimator;
        public void SetAnimatorController(RuntimeAnimatorController newController) => animatorController = newController;

        // Attack state info
        public string GetAttackStateInfo()
        {
            return $"AttackSequence: {m_isInAttackSequence}, Step: {m_currentStep}, Moving: {m_isMoving}";
        }
    }
}